--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -9,6 +9,7 @@
     <th>Albums</th>
     <th>Hometown</th>
     <th>Edit</th>
+    <th>Delete</th>
   </tr>
 
   <% @artists.each do |artist| %>
@@ -18,8 +19,11 @@
         <td><%= artist.albums %></td>
         <td><%= artist.hometown %></td>
         <td><a class="btn-floating btn-large red" href="<%= edit_artist_path(artist) %>" >
-           <em class="large material-icons">Edit Artist</em>
-          </a>
+                      <i class="large material-icons">mode_edit</i>
+                </a>
+          </td>
+        <td><a class="btn-floating btn-large red" data-confirm="Are you sure you want to delete <%= artist.name %>?" data-method="delete" href="/artists/<%= artist.id %>" rel="nofollow"><i class="large material-icons">Delete Artist</i>
+           </a>
         </td>
       </tr>
   <% end %>
